# SSH-Manager-Linux

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_appimage.sh  build_deb.sh  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
app/: __init__.py  i18n.py
app/database/: __init__.py  db.py  migrations.py
app/models/: __init__.py  remote.py  server.py  settings.py  transfer.py  tunnel.py
app/remote_desktop/: __init__.py  bundle.py  launcher.py  setup.py
app/security/: __init__.py  credentials.py  hostkeys.py  lock.py
app/sftp/: __init__.py  client.py  paths.py
app/ssh/: __init__.py  client.py  session_manager.py
app/transfers/: __init__.py  queue.py
app/tunnels/: __init__.py  manager.py
app/ui/: __init__.py  icons.py  main_window.py  session_tab.py  styles.py  title_bar.py  widgets.py
app/ui/dialogs/: __init__.py  credential_dialog.py  group_dialog.py  server_dialog.py  settings_dialog.py
app/ui/panels/: __init__.py  remote_panel.py  sftp_panel.py  terminal_panel.py  terminal_widget.py  transfers_panel.py
app/utils/: __init__.py  enums.py  export_import.py  logging_setup.py  network.py  paths.py  process.py  sanitize.py  vnc_passwd.py
app/workers/: __init__.py  async_bridge.py
packaging/: ssh-manager-linux.desktop
packaging/deb/: control
tests/: conftest.py  test_database.py  test_export_and_process_security.py  test_export_import.py  test_hostkey_preauth.py  test_models.py  test_network_paths.py  test_security.py  test_sftp_and_transfers.py  test_tunnels_and_process.py
