[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-manager-linux"
version = "1.0.0"
description = "SSH-Manager-Linux — cliente desktop SSH/SFTP para Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "SSH-Manager-Linux" }]
keywords = ["ssh", "sftp", "tunnel", "linux", "desktop", "asyncssh", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PySide6>=6.6.0",
    "asyncssh>=2.14.0",
    "qasync>=0.27.1",
    "keyring>=24.3.0",
    "cryptography>=41.0.0",
    "pyte>=0.8.1",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Niltonjuniornzx/SSH-Manager-Linux"
Issues = "https://github.com/Niltonjuniornzx/SSH-Manager-Linux/issues"
Repository = "https://github.com/Niltonjuniornzx/SSH-Manager-Linux"

[project.scripts]
ssh-manager-linux = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
